<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.abubusoft</groupId>
		<artifactId>kripton-parent</artifactId>
		<version>8.0.0-rc.3</version>
		<relativePath>./kripton-parent/pom.xml</relativePath>
	</parent>

	<artifactId>kripton-project</artifactId>

	<packaging>pom</packaging>
	<name>Kripton Project</name>
	<description>Kripton persistence library - project</description>
	<url>https://github.com/xcesco/kripton</url>

	<modules>
		<module>kripton-parent</module>
		<module>kripton-core</module>
		<module>kripton</module>
		<module>kripton-dataformat-cbor</module>
		<module>kripton-dataformat-properties</module>
		<module>kripton-dataformat-yaml</module>
		<module>kripton-dataformat-smile</module>
		<module>kripton-arch-integration</module>
		<module>kripton-arch-test</module>
		<module>kripton-android-core</module>
		<module>kripton-orm</module>
		<module>kripton-shared-preferences</module>
		<module>kripton-retrofit-converter</module>
		<module>kripton-android-library</module>
		<module>kripton-processor</module>
		<module>kripton-sqlite-test-library</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>
		<aggregate.report.dir>tests/target/site/jacoco-aggregate/jacoco.xml</aggregate.report.dir>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.eluder.coveralls</groupId>
				<artifactId>coveralls-maven-plugin</artifactId>
				<version>4.3.0</version>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
			</plugin>

		</plugins>
	</build>


</project>
